test/suites/fail-lower/L-016e.expected
  × One or more errors occured.

Error: L-016

  × "Type" is not a valid identifier
   ╭─[L-016e.pol:2:1]
 1 │ data Bool { T, F }
 2 │ let Type : Bool { T }
   · ─────────────────────
   ╰────
  help: "Type" is the name of the impredicative type universe.
