test/suites/fail-lower/L-016e.pol
data Bool { T, F }
let Type : Bool { T }